# aiwars

./: .env.example  .gitignore  ARCHITECTURE.MD  HYDRA_FINAL_SPEC.md  HYDRA_SPEC_LAYERS.md  HYDRA_SPEC_ML.md  HYDRA_SPEC_TRADING.md  LAYER_ANALYSIS.md  PROFITABILITY_AUDIT.md  README.md  SYSTEM_STATUS.md  check_ip.py  pyproject.toml  requirements.production.txt  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: HYDRA_FINAL_SPEC.md  HYDRA_SPEC_LAYERS.md  HYDRA_SPEC_ML.md  HYDRA_SPEC_TRADING.md  LOGS.MD
hydra/: __init__.py  __main__.py  cli.py
hydra/core/: __init__.py  config.py  engine.py  position_manager.py  trading_engine.py  types.py
hydra/dashboard/: __init__.py  app.py  app_v2.py
hydra/layers/: __init__.py  data_providers.py  enhanced_sentiment.py  layer1_market_intel.py  layer2_statistical.py  layer4_risk.py  layer5_execution.py  layer5_executor.py  llm_analyst.py
hydra/paper_trading/: __init__.py  dashboard.py  engine.py  portfolio.py
hydra/training/: __init__.py  backtester.py  data_pipeline.py  features.py  (+5 more)
scripts/: backtest_model.py  diagnose_signals.py  test_1year_fetch.py  test_coinalyze_fetch.py  test_layer1.py  test_layer1_enhanced.py  test_layer1_new.py  test_layer2.py  test_layer_integration.py  test_layers_345.py  test_ml_models.py  test_models.py  test_oi_data.py  test_paper_trading.py  test_trading_pipeline.py  train_all_pairs.py  train_full_model.py  train_ml_models.py  train_signal_scorer.py
(+7 files in other folders)
