[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-trading"
version = "1.0.0"
description = "HYDRA - AI-Native Short-Term Crypto Perpetual Futures Trading System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "HYDRA Team"}
]
keywords = ["crypto", "trading", "futures", "ai", "machine-learning"]

[project.scripts]
hydra = "hydra.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
